ai for quiz generation added

--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -28,6 +28,7 @@
 </head>
 <body>
     <h1>Welcome to my quiz app</h1>
+    <a href="{% url 'quiz' %}">Create quiz</a>
     {% for i in quizzes %}
 
     <div class="quiz">
