--- a/base/templates/base/form.html
+++ b/base/templates/base/form.html
@@ -1,38 +1,94 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Quiz App</title>
     <style>
-        *{
-            box-sizing: border-box;
-        }
-        h1{
-            text-align: center;
-        }
-        form{
-            max-width: 700px;
-            width: 100%;
-            margin: auto;
-        }
+      * {
+        box-sizing: border-box;
+      }
 
-        form > *{
-            width: 100%;
-        }
+      h1 {
+        text-align: center;
+      }
 
-        form input, form textarea, form button, form select{
-            width: 100%;
-            padding: 0.5rem 1rem;
-        }
+      form {
+        max-width: 700px;
+        width: 100%;
+        margin: auto;
+      }
+
+      form > * {
+        width: 100%;
+      }
+
+      form input,
+      form textarea,
+      form button,
+      form select {
+        width: 100%;
+        padding: 0.5rem 1rem;
+      }
     </style>
-</head>
-<body>
+  </head>
+
+  <body>
     <h1>Welcome to my quiz app</h1>
     <form method="post">
-        {% csrf_token %}
-        {{form.as_p}}
-        <button type="submit">Submit</button>
+      {% csrf_token %}
+      <p>
+        <label for="id_title">Title:</label>
+        <input
+          type="text"
+          name="title"
+          maxlength="250"
+          required=""
+          id="id_title"
+        />
+
+        <span class="helptext">Title of your quiz</span>
+      </p>
+
+      <p>
+        <label for="id_description">Description:</label>
+        <textarea
+          name="description"
+          cols="40"
+          rows="10"
+          required=""
+          id="id_description"
+        ></textarea>
+      </p>
+
+      <p>
+        <label for="id_number_of_questions">Number of questions:</label>
+        <input
+          type="number"
+          name="number_of_questions"
+          value="5"
+          required=""
+          id="id_number_of_questions"
+        />
+      </p>
+
+      <p>
+        <label for="id_duration">Duration:</label>
+        <input
+          type="number"
+          name="duration"
+          value="5"
+          min="0"
+          required=""
+          id="id_duration"
+        />
+      </p>
+
+      <p>
+        <label for="id_slug">Slug:</label>
+        <input type="text" name="slug" maxlength="50" id="id_slug" />
+      </p>
+      <button type="submit">Submit</button>
     </form>
-</body>
+  </body>
 </html>
