--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -19,3 +19,27 @@
 body {
  
 }
+h1{line-height: 1.3;} 
+p{
+  line-height: 1.7;
+}
+.img{
+  width: 50%;
+  &img{
+    width: 100%;
+  }
+}
+
+.category{
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  &*{
+    width: 100%;
+  }
+  h1{
+    text-align: left;
+  }
+ 
+}
