--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -2,6 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
+/* @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap'); */
+
 :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
@@ -15,13 +17,29 @@
     --background-end-rgb: 0, 0, 0;
   }
 }
-*{
+
+* {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
 }
 
-h1{line-height: 1.3;} 
-p{
+body {
+  font-family: 'Poppins', sans-serif;
+}
+
+h1 {
+  line-height: 1.3;
+}
+
+.title {
+  line-height: 1.5;
+}
+
+.illustrate img svg{
+  color: #0a2243;
+}
+
+p {
   line-height: 1.7;
 }
